# db/schema.rb
@@ -10,10 +10,21 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_04_03_160758) do
+ActiveRecord::Schema.define(version: 2021_04_05_152206) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "internet_troubles", force: :cascade do |t|
+    t.bigint "user_id"
+    t.string "trouble"
+    t.string "category"
+    t.string "status"
+    t.boolean "is_predicted", default: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["user_id"], name: "index_internet_troubles_on_user_id"
+  end
 
   create_table "users", force: :cascade do |t|
     t.string "email"
@@ -23,4 +34,5 @@ ActiveRecord::Schema.define(version: 2021_04_03_160758) do
     t.datetime "updated_at", precision: 6, null: false
   end
 
+  add_foreign_key "internet_troubles", "users"
 end
